vlib/v/checker/tests/struct_none_field_type_err.vv
struct Jaca {
	lala none
}

fn f() {
	mut s := Jaca{
		lala: none
	}
	println(s)
}

f()
